Fix hidden context menu - improved but not right yet
Still gets hidden/clipped off the bottom of the list (try showing the
context menu for the last item).

--- a/frontend/app/css/browse.less
+++ b/frontend/app/css/browse.less
@@ -1,17 +1,20 @@
-.browse .list-group-item {
-  i.type { margin-right: 6px; }
-  cursor: pointer;
+.browse {
+  .list-group {
+    overflow-x: hidden;
+  }
 
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  position: relative;
+  .list-group-item {
+    i.type { margin-right: 6px; }
+    cursor: pointer;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 
-  // Right context menu
-  .actions {
-    right: 15px;
-    z-index: 10;
-    position: absolute;
-    top: 6px;
+    // Right context menu
+    .actions {
+      right: 15px;
+      z-index: 10;
+      position: absolute;
+      top: 6px;
+    }
   }
 }
